--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,10 @@ Password:- Rohit@12345
 
 
 TO DO-
-1. create db for asset as reff
-2. when click on asset, listing will open with asset listing(show Image and name only), and add button
-3. Click on add new - 4 steps form will open as refference
-4. save the data
+1. Check and migrate the migration, migration is created but not migrated.
+2. when click on asset, listing will open with asset listing(show Image and name only, EDIT AND DELETE BUTTON), and add button at upper right
+3. Click on add new - 4 steps form will open
+4. save the data and edit the data
 
 
 
